chassis/tests/failing/comp_no_return_type.stderr
error: Return type is required
  --> $DIR/comp_no_return_type.rs:18:9
   |
18 |         fn resolve_dummy(&self);
   |         ^^^^^^^^^^^^^^^^^^^^^^^
